Tue Aug 26 10:14:03 2003  Diego Sevilla  <dsevilla@ditec.um.es>

	* CIDLC/ServantSourceGenerator.cpp: Correctly generate get and set
	  operations for attributes in the servant code.  An error in how
	  I built the traverse was preventing that.

Tue Aug 26 09:27:17 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:

          Changed the constructor of SetAttributeEmitter to take
          INArgTypeNameEmitter as a delegate instead of
          ReturnTypeNameEmitter, which was previously the case, causing
          the code generation to emit the return type char* instead
          of the correct IN argument type const char*. Thanks to
          Roland Schimmack <SC@ProCom.de> for reporting the bug.

Mon Aug 25 09:47:19 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* examples/OEP/Display/NavDisplayGUI_exec/RootPanel.h: Fixed a
	  compilation error by adding inclusion of "ace/Null_Mutex.h" and
	  define QT_GENUINE_STR.

Mon Aug 25 07:42:14 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tools/RTComponentServer/ComponentServer_Task.cpp:
	* tools/RTComponentServer/ComponentServer_Task.h:
	* tools/RTComponentServer/RTConfig_Manager.h: Fixed merge errors
	  by adding inclusion of "tao/ORB.h", "ace/Null_Mutex.h" and
	  such.

Sun Aug 24 22:03:55 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	  Merged the RTCIAO-0 branch into main trunk.

	Sun Aug 24 21:45:33 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

		* tools/Assembly_Deployer/Assembly_Deployer.mpc:
		* tools/Daemon/Daemon.mpc: Both CIAO_Daemon and Assembly_Manager
		  depend on RTCORBA  library now because they both required to
		  handle RTCORBA related types.

		* tools/Assembly_Deployer/Assembly_Visitors.cpp:
		* tools/Assembly_Deployer/Assembly_Visitors.h: Decoupled the
		  container creation functionality from the creation of
		  ComponentServer into a separate method.  This allows us to